tests/ast_interpreter/err_break_outside_loop.expected
<string>:4:9: error: break outside a loop
        break;
        ^^^^^^
